services/oauth2-proxy/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 3 # hardcoded
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      containers:
      - args:
        - --provider=github
        - --email-domain=*
        # - --scope=email+profile # fix for 500 errors.
        - --upstream=static://200
        - --http-address=0.0.0.0:4180
        - --reverse-proxy=true
        - --pass-authorization-header=true
        - --pass-access-token=true
        - --pass-user-headers=true
        - --set-authorization-header=true
        - --set-xauthrequest=true
        - --cookie-refresh=1m
        - --cookie-expire=30m
        # - --cookie-csrf-per-request=true  # disabled: incompatible with ext_authz flow
        - --cookie-domain=.cguertin.dev
        - --whitelist-domain=.cguertin.dev
        - --redirect-url=https://auth.k8s.cguertin.dev/oauth2/callback
        image: quay.io/oauth2-proxy/oauth2-proxy
        imagePullPolicy: IfNotPresent
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
